# stroik-platform

./: .gitignore  ARCHITECTURE.md  CHANGE_LOG_DETAILED.md  DEPLOYMENT_GUIDE.md  FOR_NEW_CHAT.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  PHASE3.1_COMMIT_MESSAGE.txt  PHASE3.1_DOCUMENTATION_INDEX.md  PHASE4.1_COMPLETE.md  PHASE4.1_REFACTOR.md  PHASE_1_SETUP.md  PROJECT_ARCHITECTURE.md  PROJECT_EXPORT.md  QUICK_REFERENCE.md  QUICK_SNAPSHOT.md  QUICK_START.md  README.md  ROADMAP.md  SESSION_COMPLETE_SUMMARY.md  VERCEL_DEPLOY.md  render.yaml  start-dev.ps1  start-dev.sh  test_bearer_auth.py  test_full_auth_flow.py  test_phase4.py  vercel.json
.github/: TERMINAL_COMMANDS_REFERENCE.md  copilot-instructions.md  universal-ai-guidelines.md
.github/workflows/: deploy.yml  lint.yml  tests.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  verify_schema.py
backend/alembic/: env.py
backend/alembic/versions/: 002_add_portfolio_cases.py  32b48a2c1c31_initial_sqlite_schema.py  3a236e55a4d6_add_verification_levels_entity_types_.py  4b347f66e5e7_add_bids_table_for_project_bidding.py  88a719b0ac0c_add_projects_and_bids_tables.py  a1b2c3d4e5f6_add_reviews_table.py  b7e8f9a0b1c2_add_email_password_to_users.py  c9d0e1f2a3b4_merge_reviews_and_email_heads.py  d1e2f3a4b5c6_head_marker_native_enum_varchar.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  chat.py  db_models.py  portfolio.py
backend/app/routers/: __init__.py  auth.py  chat.py  portfolio.py  projects.py  reviews.py  subscriptions.py  users.py  verification.py  workers.py
backend/app/schemas/: __init__.py  auth.py  portfolio.py  project.py  user.py
backend/app/services/: llm_service.py
backend/models/: portfolio.py
backend/routers/: portfolio.py  users_patch.py
docs/: DOCUMENTATION_INDEX.md  PHASE3.1_MARKETPLACE_CORE.md  PHASE3_COMPLETE.md  PHASE4.2_NATIVE_JSON_MODE.md  логи1.txt  логи2.txt
frontend/: .env.example  .eslintrc.json  .gitignore  next.config.mjs  package.json  pwa-config.js  tailwind.config.ts  tsconfig.json  vercel.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: DashboardClient.tsx  layout.tsx  page-backup.tsx  page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/bids/: page.tsx
frontend/src/app/dashboard/portfolio/: page.tsx
frontend/src/app/dashboard/portfolio/new/: page.tsx
frontend/src/app/dashboard/projects/: page.tsx
frontend/src/app/dashboard/reviews/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/statistics/: page.tsx
frontend/src/app/dashboard/subscription/: page.tsx
frontend/src/app/dashboard/verification/: page.tsx
frontend/src/app/find/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/profile/[id]/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/app/worker/[id]/: page.tsx
frontend/src/components/auth/: AuthGuard.tsx
frontend/src/components/chat/: ChatWindow.tsx
frontend/src/components/dashboard/: AttachEmailBanner.tsx  BidModal.tsx  BlocksRibbon.tsx  EmployerProjects.tsx  ProfileCard.tsx  ProjectFeed.tsx  WorkerBids.tsx
frontend/src/components/dashboard/widgets/: PortfolioWidget.tsx  StatisticsWidget.tsx  StatsWidget.tsx  SubscriptionWidget.tsx  VerificationWidget.tsx
frontend/src/components/layout/: SiteFooter.tsx  SiteHeader.tsx
frontend/src/components/providers/: ThemeProvider.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  FileUpload.tsx  Input.tsx  Modal.tsx  Select.tsx  Textarea.tsx  ThemeToggle.tsx  Toast.tsx
frontend/src/lib/: api.ts  useDashboardBlocks.ts  utils.ts
infrastructure/: docker-compose.yml
