[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stroik-backend"
version = "0.1.0"
description = "Backend для платформы СТРОИК"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
    "requests>=2.31.0",
    "google-genai>=0.3.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

# ---------------------------------------------------------------------------
# Конфигурация setuptools
# ---------------------------------------------------------------------------
# Явно указываем, что Python-пакетом является только `app`. Без этого setuptools
# в режиме автодискавери видит две top-level директории (`app/` и `alembic/`)
# и отказывается собирать проект с ошибкой
# "Multiple top-level packages discovered in a flat-layout".
# alembic/ -- это инфраструктура миграций, она не часть устанавливаемого пакета.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*", "venv*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
